<resources>
    <string name="app_name">Pixelr</string>
    <string name="sign_in_text">Sign in using any of the available services</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">7iKOilYZgBEcPXZOSlCpCuGaZ</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">ISSeOrRVcoIJYczdIbKzanxcFrYmmczJw3rSPRGkhIs02hwP9x</string>
    <string name="facebook_application_id" translatable="false">656411391166177</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb656411391166177</string>
    <string name="twitter_consumer_key" translatable="false">7iKOilYZgBEcPXZOSlCpCuGaZ</string>
    <string name="twitter_consumer_secret" translatable="false">ISSeOrRVcoIJYczdIbKzanxcFrYmmczJw3rSPRGkhIs02hwP9x</string>
    <string name="something_went_wrong">Something went wrong. Please try again later</string>
    <string name="required_permission_denied">This permission is required for app to function</string>
    <string name="empty_username_msg">Please enter username before adding profile pic</string>
    <string name="no_camera_found">No camera support found</string>
    <string name="no_profile_pic">Please add a profile pic to continue</string>
    <string name="loading_please_wait">Please wait...</string>
    <string name="hash_msg">#Cuteness</string>
    <string name="start_typing_here">Start typing...</string>
    <string name="very_long_text">This is a big text called lorem ipsum dolor This is a big text called lorem ipsum dolor This is a big text called lorem ipsum dolor</string>
    <string name="very_standard_text">She is so cute and perfect. I feel like hugging her all the time.</string>
    <string name="no_comments_found">No more comments found...</string>
    <string name="text_share_now">share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_pic_name">Name of the picture</string>
    <string name="add_pic_timestamp">When was this taken ?</string>
    <string name="add_pic_photographer">Who took this picture ?</string>
    <string name="add_pic_comment">Comments...</string>
    <string name="fill_all_columns">Please fill all the fields</string>
    <string name="pic_already_exists">This pic already exists</string>
    <string name="save_picture">Save</string>
    <string name="image_upload_successful">Image has been uploaded successfully</string>
    <string name="error_uploading_pic">Error occured while uploading the picture. Try again later...</string>
    <string name="invalid_args_msg">Invalid arguments pased</string>
    <string name="error_try_again">An error has occured. Please try again later</string>
    <string name="comment_saved_successfully">Comment saved successfully</string>
    <string name="text_picture">Pictures</string>
    <string name="text_poems">Poems</string>
    <string name="text_videos">Videos</string>
    <string name="text_audio">Audio</string>
    <string name="text_add_stuff">Add stuff</string>
    <string name="feature_coming_soon">Coming soon... This feature is not yet supported</string>
    <string name="comment_added_successfully">Comment added successfully</string>
    <string name="text_download">Download</string>
    <string name="text_bug_report">Report a bug</string>
    <string name="tap_to_open">Tap to open file</string>
    <string name="text_downloading">Downloading...</string>
    <string name="unable_to_share">Unable to share downloaded file</string>
    <string name="shared_via_vivi">Shared via Pixelr for andriod</string>
    <string name="commented_on_suffix">commented on</string>
    <string name="created_on_text">Created on</string>
    <string name="no_more_poems_available">No more poems are available at this moment.</string>
    <string name="logging_in">Logging in...</string>
    <string name="account_suspended_msg">Your account has been suspended by administrator. Please request access from login page.</string>
    <string name="no_likes_found">No more likes for this artifact</string>
    <string name="logout_text">Logout</string>
    <string name="add_profile_pic">Add profile pic</string>
    <string name="pick_from_galery">Pick from gallery</string>
    <string name="camera_capture">Use camera</string>
    <string name="pick_from_galery_title">Select picture</string>
    <string name="dynamic_link_process_error">Error processing dynamic link</string>
    <string name="text_share_push_all">Push notify</string>
    <string name="crash_app_text">Crash the app</string>
    <string name="user_notes_text">User notes</string>
</resources>
