<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_stuff"
        android:icon="@drawable/ic_camera_plus"
        android:title="@string/text_add_stuff"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/only_picture"
        android:title="@string/text_picture"
        app:showAsAction="never"/>
    <item
        android:id="@+id/only_videos"
        android:title="@string/text_videos"
        app:showAsAction="never"/>
    <item
        android:id="@+id/only_audio"
        android:title="@string/text_audio"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bug_report_menu"
        android:icon="@mipmap/ic_bug_report"
        android:title="@string/text_bug_report"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_user_notes"
        android:title="@string/user_notes_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_crash_app"
        android:title="@string/crash_app_text"
        app:showAsAction="never"/>
</menu>